# ghostwriter

./: .gitignore  AGENTS.md  Cargo.toml  README.md  UNICODE_SUPPORT.md  build.sh
.github/workflows/: build.yml
prompts/: french_tutor.json
src/: config.rs  device.rs  embedded_assets.rs  keyboard.rs  lib.rs  main.rs  pen.rs  screenshot.rs  segmenter.rs  text_renderer.rs  touch.rs  util.rs
src/llm_engine/: anthropic.rs  google.rs  mod.rs  openai.rs
